--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-image: url(img/sky.jpg);	
+	background-image: url(../img/sky.jpg);	
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -17,7 +17,7 @@
 	height: 200px;
 	width: 500%;
 	display: block;
-	background-image: url(img/road.jpg);
+	background-image: url(../img/road.jpg);
 	background-repeat: repeat-x;
 	position: absolute;
 	bottom: 0;
@@ -35,7 +35,7 @@
 .city{
 	height: 250px;
 	width: 500%;
-	background-image: url(img/city.png);
+	background-image: url(../img/city.png);
 	background-repeat: repeat-x;
 	position: absolute;
 	bottom: 200px;
